feat: 画像保存機能を実装 (#31)
* feat: media serviceのファイル作成

* feat: proto作成

* chore: buf gen

* feat: メディアサービスを実装

* feat: 認証情報を追加

* feat:  urlを置き換える処理を追加

* feat: protoを修正

* feat: レスポンスの型を定義

* feat: API Gatewayにmedia service追加

* fix: パスに対してpresigned urlを発行するように修正

* chore: orval gen

* chore: 初期アイコン画像を追加

* feat: アイコン画像を起動時に入れる処理を追加

* feat: ユーザー登録時に初期アイコンを設定

* feat: サーバーアイコンの処理を追加

* feat: サーバーアイコンの更新機能を実装

* feat: バケットを公開設定にする

* feat: ユーザーアイコン更新機能実装

* chore: format

* chore: 環境変数周り設定

* fix: websocketインスタンスを一つに修正

* feat: デフォルトアイコンのパスを修正

* fix: ログアウト時にキャッシュをクリア

* chore: lint fix

* chore: メッセージコンポーネントの不要なUI削除

* chore: lint fix

* fix: typo

* feat: 環境変数を設定

* fix: TODO()を削除

* fix: 環境変数の設定漏れ修正

* fix: イメージをPullするように修正

* chore: actionsの更新
