# server/api/gen/media/media_service_grpc.pb.go
@@ -1,0 +1,121 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.5.1
+// - protoc             (unknown)
+// source: media_service.proto
+
+package mediapb
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	MediaService_GetPresignedUploadURL_FullMethodName = "/media.MediaService/GetPresignedUploadURL"
+)
+
+// MediaServiceClient is the client API for MediaService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type MediaServiceClient interface {
+	GetPresignedUploadURL(ctx context.Context, in *GetPresignedUploadURLRequest, opts ...grpc.CallOption) (*GetPresignedUploadURLResponse, error)
+}
+
+type mediaServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewMediaServiceClient(cc grpc.ClientConnInterface) MediaServiceClient {
+	return &mediaServiceClient{cc}
+}
+
+func (c *mediaServiceClient) GetPresignedUploadURL(ctx context.Context, in *GetPresignedUploadURLRequest, opts ...grpc.CallOption) (*GetPresignedUploadURLResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetPresignedUploadURLResponse)
+	err := c.cc.Invoke(ctx, MediaService_GetPresignedUploadURL_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// MediaServiceServer is the server API for MediaService service.
+// All implementations must embed UnimplementedMediaServiceServer
+// for forward compatibility.
+type MediaServiceServer interface {
+	GetPresignedUploadURL(context.Context, *GetPresignedUploadURLRequest) (*GetPresignedUploadURLResponse, error)
+	mustEmbedUnimplementedMediaServiceServer()
+}
+
+// UnimplementedMediaServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedMediaServiceServer struct{}
+
+func (UnimplementedMediaServiceServer) GetPresignedUploadURL(context.Context, *GetPresignedUploadURLRequest) (*GetPresignedUploadURLResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetPresignedUploadURL not implemented")
+}
+func (UnimplementedMediaServiceServer) mustEmbedUnimplementedMediaServiceServer() {}
+func (UnimplementedMediaServiceServer) testEmbeddedByValue()                      {}
+
+// UnsafeMediaServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to MediaServiceServer will
+// result in compilation errors.
+type UnsafeMediaServiceServer interface {
+	mustEmbedUnimplementedMediaServiceServer()
+}
+
+func RegisterMediaServiceServer(s grpc.ServiceRegistrar, srv MediaServiceServer) {
+	// If the following call pancis, it indicates UnimplementedMediaServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&MediaService_ServiceDesc, srv)
+}
+
+func _MediaService_GetPresignedUploadURL_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetPresignedUploadURLRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(MediaServiceServer).GetPresignedUploadURL(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: MediaService_GetPresignedUploadURL_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(MediaServiceServer).GetPresignedUploadURL(ctx, req.(*GetPresignedUploadURLRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// MediaService_ServiceDesc is the grpc.ServiceDesc for MediaService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var MediaService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "media.MediaService",
+	HandlerType: (*MediaServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "GetPresignedUploadURL",
+			Handler:    _MediaService_GetPresignedUploadURL_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "media_service.proto",
+}
